# echopad

./: .cursorrules  App.tsx  CLAUDE.md  README.md  api.ts  index.css  index.html  index.tsx  metadata.json  package.json  pnpm-lock.yaml  types.ts  vite.config.ts
.claude/: settings.local.json
commands/: helpCommand.ts  index.ts  notebookCommand.ts  pingCommand.ts  reminderCommand.ts  searchCommand.ts  tagCommand.ts  templateCommand.ts  timestampCommand.ts  todoCommand.ts
components/: CommandAutocomplete.tsx  CommandPalette.tsx  ContextMenu.tsx  Dashboard.tsx  IconPicker.tsx  InputArea.tsx  LinkPreview.tsx  MainContent.tsx  MediaSidesheet.tsx  MessageList.tsx  Modal.tsx  NoNotebookSelected.tsx  NoteImage.tsx  NotebookHeader.tsx  SettingsModal.tsx  Sidebar.tsx  SplashScreen.tsx  TitleBar.tsx  VaultCustomization.tsx  VaultSetup.tsx
contexts/: ThemeContext.tsx
hooks/: index.ts  useDevMode.ts  useKeyboardShortcuts.ts  useSidebarResize.ts  useVaultQueries.ts
scripts/: release.ps1  release.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/sync/: auth.rs  client.rs  commands.rs  conflict.rs  crypto.rs  engine.rs  error.rs  mod.rs  queue.rs  scanner.rs  state.rs  types.rs  watcher.rs
stores/: boardStore.ts  commandStore.ts  index.ts  keybindsStore.ts  notebookStore.ts  notesStore.ts  remindersStore.ts  routerStore.ts  searchStore.ts  syncStore.ts  tagsStore.ts  uiStore.ts  updaterStore.ts  vaultStore.ts
types/: chatCommands.ts  reminders.ts  (+1 more)
(+96 files in other folders)
