[package]
name = "echopad"
version = "0.1.0"
description = "A Discord-inspired note taking application"
authors = ["DevNvll"]
license = "MIT"
repository = "https://github.com/DevNvll/echopad"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.21"
url = "2"

# Sync & Crypto dependencies
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify = "6"
parking_lot = "0.12"
thiserror = "1"
async-trait = "0.1"
urlencoding = "2"
hostname = "0.4"
